2011-03-21  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (x-px->fl, y-px->fl): Takes care of
	border size.

2011-03-20  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-info.lisp (show-config-variable): call
	produce-conf-var-doc.

2011-03-18  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-autodoc.lisp (produce-conf-var-doc-html): Produce a
	documentation for all configurable variables in CLFSWM -
	HTML version.

	* src/clfswm-internal.lisp (leave-frame): Hide all children except
	the current window.

2011-03-16  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-autodoc.lisp (produce-all-docs): Produce a
	documentation for all configurable variables in CLFSWM.

	* src/clfswm-layout.lisp (set-gimp-layout): Display a notify
	window with the help on the GIMP layout.

2011-03-12  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/menu-def.lisp: Menu update to prevent cursor keys clash.

	* clfswm.asd: Change compilation order to prevent undefined
	variables.

	* src/clfswm-internal.lisp (show-child(frame)): Handle properly
	the show-root-frame-p parameter.

2011-03-11  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (move-frame, resize-frame): Do not move or
	resize a frame when it's the current root.

2011-03-10  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (show-all-children): Handle properly
	duplicated child in multipe frames.

2011-03-09  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/volume-mode.lisp (set-default-volume-keys): Add more
	keybindings (up/down, right/left) to raise/lower the volume.

	* src/clfswm-layout.lisp: Add a variable border size for frames
	and windows.

2011-03-08  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (cut-current-child, remove-current-child)
	(delete-current-child): Hide the current child before doing the
	action.
